--- a/templates/vsstats/base.html
+++ b/templates/vsstats/base.html
@@ -4,19 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Статистика</title>
+    <title>
+        {% block title %}{% endblock %}
+    </title>
     <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
 </head>
 <body>
-<div class="container">
+<div class="container mt-2 mb-2">
     <div class="row justify-content-center">
-        <div class="col-12 col-md-6">
-            {{!base}}
+        <nav class="col-12 col-md-6 d-flex justify-content-end" id="header">
+            <a class="btn btn-primary mr-1" href="{% url 'index' %}">Главная</a>
+            <a class="btn btn-primary" href="/admin">Панель управления</a>
+        </nav>
+    </div>
+    <div class="row justify-content-center">
+        <div class="col-12 col-md-6" id="content">
+            {% block content %}{% endblock %}
         </div>
     </div>
-<div>
+</div>
 </body>
 </html>
