--- a/templates/vsstats/base.html
+++ b/templates/vsstats/base.html
@@ -11,17 +11,23 @@
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
           integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
           crossorigin="anonymous">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
+          rel="stylesheet"
+          integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN"
+          crossorigin="anonymous">
 </head>
 <body>
 <div class="container mt-2 mb-2">
     <div class="row justify-content-center">
         <nav class="col-12 col-md-6 d-flex justify-content-end" id="header">
-            <a class="btn btn-primary mr-1" href="{% url 'index' %}">Главная</a>
-            <a class="btn btn-primary" href="/admin">Панель управления</a>
+            <a class="mr-2" href="{% url 'index' %}">
+                <i class="fa fa-home mr-1"></i>Главная</a>
+            <a class="" href="/admin">
+                <i class="fa fa-cog mr-1"></i>Панель управления</a>
         </nav>
     </div>
     <div class="row justify-content-center">
-        <div class="col-12 col-md-6" id="content">
+        <div class="col-12 col-md-6 mt-2" id="content">
             {% block content %}{% endblock %}
         </div>
     </div>
