--- a/templates/vsstats/base.html
+++ b/templates/vsstats/base.html
@@ -20,10 +20,17 @@
 <div class="container mt-2 mb-2">
     <div class="row justify-content-center">
         <nav class="col-12 col-md-6 d-flex justify-content-end" id="header">
-            <a class="mr-2" href="{% url 'index' %}">
+            <a class="mr-2" href="{% url 'vsstats:index' %}">
                 <i class="fa fa-home mr-1"></i>Главная</a>
-            <a class="" href="/admin">
+            <a class="mr-2" href="{% url 'admin:index' %}">
                 <i class="fa fa-cog mr-1"></i>Панель управления</a>
+            {% if user.is_authenticated %}
+                <a class="mr-2" href="{% url 'logout' %}">
+                    <i class="fa fa-sign-out mr-1"></i>Выйти</a>
+            {% else %}
+                <a href="{% url 'login' %}">
+                    <i class="fa fa-sign-in mr-1"></i>Войти</a>
+            {% endif %}
         </nav>
     </div>
     <div class="row justify-content-center">
