--- a/templates/vsstats/base.html
+++ b/templates/vsstats/base.html
@@ -19,13 +19,13 @@
 <body>
 <div class="container mt-2 mb-2">
     <div class="row justify-content-center">
-        <nav class="col-12 col-md-6 d-flex justify-content-end" id="header">
-            <a class="mr-2" href="{% url 'vsstats:index' %}">
+        <nav class="col-12 col-md-8 col-lg-6 mt-2 d-flex flex-wrap justify-content-end" id="header">
+            <a class="mr-2 mb-2 mb-sm-0" href="{% url 'vsstats:index' %}">
                 <i class="fa fa-home mr-1"></i>Главная</a>
-            <a class="mr-2" href="{% url 'admin:index' %}">
+            <a class="mr-2 mb-2 mb-sm-0" href="{% url 'admin:index' %}">
                 <i class="fa fa-cog mr-1"></i>Панель управления</a>
             {% if user.is_authenticated %}
-                <a class="mr-2" href="{% url 'logout' %}">
+                <a class="mr-2 mb-sm-0" href="{% url 'logout' %}">
                     <i class="fa fa-sign-out mr-1"></i>Выйти</a>
             {% else %}
                 <a href="{% url 'login' %}">
@@ -34,7 +34,7 @@
         </nav>
     </div>
     <div class="row justify-content-center">
-        <div class="col-12 col-md-6 mt-2" id="content">
+        <div class="col-12 col-md-8 col-lg-6 mt-2 mt-2" id="content">
             {% block content %}{% endblock %}
         </div>
     </div>
